_generated-doc/2.2/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_configuration]]link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.match-patterns]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.match-patterns[quarkus.micrometer.binder.http-server.match-patterns]`

[.description]
--
Comma-separated list of regular expressions used to specify uri
labels in http metrics.

Vertx instrumentation will attempt to transform parameterized
resource paths, `/item/123`, into a generic form, `/item/{id}`,
to reduce the cardinality of uri label values.

Patterns specified here will take precedence over those computed
values.

For example, if `/item/\\\\d+=/item/custom` or
`/item/[0-9]+=/item/custom` is specified in this list,
a request to a matching path (`/item/123`) will use the specified
replacement value (`/item/custom`) as the value for the uri label.
Note that backslashes must be double escaped as `\\\\`.
--|list of string 
|


a| [[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.ignore-patterns]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.ignore-patterns[quarkus.micrometer.binder.http-server.ignore-patterns]`

[.description]
--
Comma-separated list of regular expressions defining uri paths that should be ignored (not measured).
--|list of string 
|


a| [[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.max-uri-tags]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.max-uri-tags[quarkus.micrometer.binder.http-server.max-uri-tags]`

[.description]
--
Maximum number of unique URI tag values allowed. After the max number of tag values is reached, metrics with additional tag values are denied by filter.
--|int 
|`100`

|===