_generated-doc/2.13/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc

:summaryTableId: quarkus-micrometer-binder-http-server-config-runtime-http-server-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_configuration]]link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.match-patterns]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.match-patterns[quarkus.micrometer.binder.http-server.match-patterns]`

[.description]
--
Comma-separated list of regular expressions used to specify uri
labels in http metrics.

Vertx instrumentation will attempt to transform parameterized
resource paths, `/item/123`, into a generic form, `/item/{id}`,
to reduce the cardinality of uri label values.

Patterns specified here will take precedence over those computed
values.

For example, if `/item/\\\\d+=/item/custom` or
`/item/[0-9]+=/item/custom` is specified in this list,
a request to a matching path (`/item/123`) will use the specified
replacement value (`/item/custom`) as the value for the uri label.
Note that backslashes must be double escaped as `\\\\`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_MATCH_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_MATCH_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.ignore-patterns]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.ignore-patterns[quarkus.micrometer.binder.http-server.ignore-patterns]`

[.description]
--
Comma-separated list of regular expressions defining uri paths that should be ignored (not measured).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_IGNORE_PATTERNS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_IGNORE_PATTERNS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.suppress-non-application-uris]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.suppress-non-application-uris[quarkus.micrometer.binder.http-server.suppress-non-application-uris]`

[.description]
--
Suppress non-application uris from metrics collection.
This will suppress all metrics for non-application endpoints using
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}`.

Suppressing non-application uris is enabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_SUPPRESS_NON_APPLICATION_URIS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_SUPPRESS_NON_APPLICATION_URIS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.max-uri-tags]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.max-uri-tags[quarkus.micrometer.binder.http-server.max-uri-tags]`

[.description]
--
Maximum number of unique URI tag values allowed. After the max number of tag values is reached, metrics with additional tag values are denied by filter.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_MAX_URI_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_BINDER_HTTP_SERVER_MAX_URI_TAGS+++`
endif::add-copy-button-to-env-var[]
--|int 
|`100`

|===